# phantomchat

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  brain.md  playbook.md
.github/: dependabot.yml
.github/workflows/: auto-deploy.yml  ci.yml  release.yml
.well-known/: security.txt
argos_wallet/: Cargo.toml
argos_wallet/src/: lib.rs  swap.rs  transfer.rs
argos_wallet_eth/: Cargo.toml
argos_wallet_eth/src/: lib.rs  rpc.rs  transfer.rs
backend/argos-risk/: app.py  blacklist.json
cli/: Cargo.toml
cli/src/: demo_cmd.rs  file_cmd.rs  group_cmd.rs  main.rs  tui.rs
core/: Cargo.toml
core/src/: address.rs  api.rs  cover_traffic.rs  dandelion.rs  envelope.rs  file_transfer.rs  fingerprint.rs  frb_generated.rs  group.rs  keys.rs  lib.rs  mixnet.rs  mls.rs  network.rs  p2p.rs  pow.rs  prekey.rs  privacy.rs  psi.rs  ratchet.rs  scanner.rs  secure_storage.rs  session.rs  storage.rs  util.rs  wasm.rs
core/tests/: dandelion_tests.rs  envelope_tests.rs  hybrid_tests.rs  keys_tests.rs  pow_tests.rs  ratchet_tests.rs  scanner_tests.rs  sealed_sender_tests.rs  secure_storage_tests.rs  session_tests.rs
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
desktop/src/: App.tsx  main.tsx  styles.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: ai_bridge.rs  ai_bridge_stt.rs  ai_bridge_watchers.rs  lib.rs  main.rs  wallet_cmds.rs
desktop/src/components/: AddContactModal.tsx  AddressQR.tsx  BindContactModal.tsx  ChannelsPane.tsx  ContactsPane.tsx  ConversationHeader.tsx  EmojiPicker.tsx  IdentityGate.tsx  InputBar.tsx  MentionPopover.tsx  MessageStream.tsx  OnboardingWizard.tsx  SearchPanel.tsx  SettingsPanel.tsx  StatusFooter.tsx  ThemeSwitcher.tsx  VoiceMessageBubble.tsx  WalletPanel.tsx  WatchersSettings.tsx
desktop/src/i18n/: de.json  en.json  index.ts
desktop/src/lib/: linkify.ts  markdown.ts  mentions.ts
docs/: AI-BRIDGE.md  HALL-OF-FAME.md  PRIVACY.md  RELAY-SELFHOSTING.md  REPRODUCIBLE-BUILDS.md  SECURITY.md  WINDOWS-BUILD.md
docs/archive/: CI-RECOMMENDATIONS.md  brain-2026-04-02.md  playbook-2026-04-01.md
docs/argos/: architecture.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: disappearing_v1.rs  envelope_parse.rs  file_v1.rs  mls_app_v1.rs  mls_welcome_v2.rs  nostr_event_extract.rs  phantomaddress_parse.rs  reaction_v1.rs  receipt_v1.rs  reply_v1.rs  typing_v1.rs
infra/: docker-compose.yml
keys/: phantomchat-pilot-cert-v2.cer  phantomchat-pilot-cert.cer  security.asc
mobile/: .gitignore  README.md  flutter-version  flutter_rust_bridge.yaml  pubspec.yaml
mobile/android/: gradle.properties  key.properties.template
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/example/mobile/: MainActivity.kt
mobile/android/app/src/main/kotlin/de/dcinfosec/phantomchat/: BootReceiver.kt  MainActivity.kt  RelayForegroundService.kt
mobile/android/app/src/main/res/drawable-v21/: launch_background.xml
mobile/android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
mobile/android/app/src/main/res/xml/: file_provider_paths.xml
mobile/assets/shaders/: glitch.frag
mobile/integration_test/: app_smoke_test.dart  header_tour.dart  relay_mgr_tour.dart  screens_tour.dart  screenshot_test.dart  settings_tour.dart
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart  main_shell.dart  theme.dart
mobile/lib/models/: contact.dart  identity.dart  message.dart
mobile/lib/screens/: channels.dart  chat.dart  diagnostics.dart  home.dart  lock_screen.dart  onboarding.dart  qr_scan.dart  relay_manager.dart  settings.dart  settings_background.dart  wallet_screen.dart
mobile/lib/services/: address_book.dart  app_lock_service.dart  background_service_config.dart  battery_opt_service.dart  chat_payment.dart  contact_directory.dart  crypto_service.dart  i18n.dart  ipfs_service.dart  log_service.dart  price_service.dart  privacy_service.dart  pro_service.dart  relay_service.dart  risk_check_service.dart  security_service.dart  storage_service.dart  update_service.dart  update_state_store.dart  voice_message.dart  wallet_service.dart
mobile/lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  network.dart  network.freezed.dart
mobile/lib/src/rust/api/: wallet.dart
mobile/lib/src/rust/api/wallet/: eth_api.dart
mobile/lib/src/theme/: cyberpunk_theme.dart
mobile/lib/src/ui/: chat_view.dart  group_chat_view.dart  groups_list_view.dart  identity_qr_view.dart  privacy_settings_view.dart  profile_view.dart  qr_scanner_view.dart
mobile/lib/widgets/: app_lock_gate.dart  chat_payment_widgets.dart  cyber_card.dart  glitch_text.dart  update_banner.dart  update_dialog.dart
mobile/rust/: Cargo.toml
mobile/rust/src/: api.rs  eth_api.rs  frb_generated.rs  lib.rs  wallet_api.rs
mobile/scripts/: build-android-bundle.sh  build-android.sh  generate-release-keystore.sh
mobile/test/: contact_format_test.dart  pbkdf2_timing_test.dart  update_service_test.dart  voice_message_test.dart  widget_test.dart
mobile/test_driver/: integration_test.dart
relays/: Cargo.toml
relays/src/: lib.rs  nostr.rs
scripts/: argos_backend_setup.sh  build-android.sh  build-windows.cmd  demo_stub.py  deploy-download-page.sh  publish-android-update-manifest.sh  publish_argos_release.sh  release-android.sh  release-windows.sh  sign-windows-v2.cmd  sign-windows.cmd  strip-msi-timestamps.ps1  verify-release.sh
site/: download-index.html
spec/: SPEC.md
tools/phantom-build-org-msi/: Cargo.toml  README.md
tools/phantom-build-org-msi/src/: main.rs
