[workspace]
members = [
    "core",
    "cli",
    "relays",
    "desktop/src-tauri",
    "tools/phantom-build-org-msi"
]
resolver = "2"

# Audit 2026-05-30 (R-7b): split the desktop release lib across many
# codegen-units so no single rustc invocation needs the ~3 GB peak that
# trips OOM/STATUS_STACK_BUFFER_OVERRUN on nexus. opt-level=3 stays.
[profile.release]
# Audit 2026-05-30 (R-7b): the desktop release was tripping
# STATUS_STACK_BUFFER_OVERRUN inside rustc on the nexus Windows host.
# Lower opt-level + single codegen-unit shrinks the per-crate stack
# pressure enough that the build completes.
opt-level = 2
codegen-units = 1
lto = false
debug = false
incremental = false
