[package]
name = "argos_wallet"
version = "0.1.0"
edition = "2021"
description = "Non-custodial Solana wallet for Argos. BIP39 mnemonic + Argon2id-encrypted local persist + Solana send/receive."

[dependencies]
solana-sdk = "2.0"
solana-client = "2.0"
bip39 = "2.1"
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rand = "0.8"
rand_core = "0.6"
hex = "0.4"
base64 = "0.22"

[lib]
name = "argos_wallet"
path = "src/lib.rs"
