[package]
name = "phantomchat_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tungstenite = "0.20"
url = "2.3"
base64 = "0.21"
qrcodegen = "1.5"
phantomchat_core = { path = "../core" }
anyhow = "1.0"
hex = "0.4"
rand = "0.8"

[features]
default = []