[package]
name = "phantomchat_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap        = { version = "4.0", features = ["derive", "color"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
tokio       = { version = "1", features = ["full"] }
anyhow      = "1.0"
hex         = "0.4"
rand        = "0.8"
base64      = "0.21"
colored     = "2"
indicatif   = "0.17"
qrcodegen   = "1.5"
dirs        = "5"
x25519-dalek = "2.0"
rand_core   = "0.6"
phantomchat_core   = { path = "../core" }
phantomchat_relays = { path = "../relays" }
