[package]
name = "phantomchat_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
clap        = { version = "4.0", features = ["derive", "color"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
tokio       = { version = "1", features = ["full"] }
anyhow      = "1.0"
hex         = "0.4"
rand        = "0.8"
base64      = "0.21"
colored     = "2"
indicatif   = "0.18"
qrcodegen   = "1.5"
dirs        = "5"
x25519-dalek = "2.0"
rand_core   = "0.6"
ratatui     = "0.28"
crossterm   = { version = "0.29", features = ["event-stream"] }
tui-textarea = "0.6"
unicode-width = "0.1"
chrono      = { version = "0.4", default-features = false, features = ["clock"] }
futures     = "0.3"
# The CLI only needs envelope/keys/scanner/privacy — not the Flutter bridge
# nor SQLCipher storage, so we build core without its default `ffi` feature.
# The `net` feature pulls the libp2p / dandelion / cover-traffic stack;
# `mls` pulls openmls. Both are enabled by default for the CLI since the
# CLI is the demo surface for those features.
phantomchat_core   = { path = "../core", default-features = false, features = ["net", "mls"] }
phantomchat_relays = { path = "../relays" }

[features]
default = []
