[package]
name = "phantomchat_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "phantomchat_core"
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
x25519-dalek = "2.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
anyhow = "1.0"
lazy_static = "1.4"
flutter_rust_bridge = "=2.12.0"
pqcrypto-mlkem = "0.1.1"
pqcrypto-traits = "0.3.5"
bs58 = "0.5"
tokio = { version = "1.40", features = ["full"] }
futures-util = "0.3"
libp2p = { version = "0.56.0", features = ["tcp", "dns", "noise", "yamux", "kad", "request-response", "json", "tokio", "macros", "gossipsub"] }
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }

[features]
default = []
pqc = []