[package]
name = "phantomchat_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "phantomchat_core"
path = "src/lib.rs"
# `rlib` is required for `cargo test` to link integration tests against us;
# `staticlib` + `cdylib` are used by the Flutter bridge build on mobile.
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets", "serde"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
anyhow = "1.0"
lazy_static = "1.4"
pqcrypto-mlkem = "0.1.1"
pqcrypto-traits = "0.3.5"
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
subtle = "2.5"

# ── Optional: async runtime + networking stack ───────────────────────────────
# libp2p + tokio pull native OS primitives that don't exist on wasm32. They
# only compile when the `net` feature (default) is on; WASM builds turn it
# off and get a crypto-only core.
bs58 = { version = "0.5", optional = true }
tokio = { version = "1.40", features = ["full"], optional = true }
futures-util = { version = "0.3", optional = true }
libp2p = { version = "0.56.0", features = ["tcp", "dns", "noise", "yamux", "kad", "request-response", "json", "tokio", "macros", "gossipsub"], optional = true }
tracing = { version = "0.1", optional = true }

# ── Optional FFI/storage dependencies ────────────────────────────────────────
# These only compile when the `ffi` feature is active (default for the Flutter
# bridge build). Turning them off lets `cargo test --no-default-features` run
# the pure-crypto tests without needing SQLCipher / OpenSSL on the host.
flutter_rust_bridge = { version = "=2.12.0", optional = true }
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"], optional = true }

[features]
# Default build = Flutter bridge target: everything on.
default = ["ffi", "net"]
# Native async networking stack (libp2p, tokio, dandelion router, cover
# traffic generator). Turn off for wasm32-unknown-unknown.
net = ["dep:bs58", "dep:tokio", "dep:futures-util", "dep:libp2p", "dep:tracing"]
# Flutter bridge + SQLCipher storage. Requires `net`.
ffi = ["net", "dep:flutter_rust_bridge", "dep:rusqlite"]
# Crypto-only build for WASM / embedded: no native runtime, no FFI.
# `cargo check --target wasm32-unknown-unknown --no-default-features --features wasm`
wasm = []
pqc = []

# ── Integration tests that require the native-runtime feature ────────────────
[[test]]
name = "dandelion_tests"
required-features = ["net"]

# ── WASM: force getrandom to use the browser's crypto.getRandomValues() ──────
# Transitively pulled by rand / rand_core / ed25519-dalek. Without the `js`
# feature the wasm32 build errors at compile time.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
