[package]
name = "phantomchat_relays"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
phantomchat_core = { path = "../core" }
tungstenite = "0.20"
url = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"