[package]
name = "phantomchat_relays"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
futures = "0.3"
phantomchat_core = { path = "../core" }
tungstenite = "0.20"
url = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"
sha2 = "0.10"
secp256k1 = { version = "0.29", features = ["rand-std", "global-context"] }
rand = "0.8"
tracing = "0.1"