[package]
name = "phantomchat_relays"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait    = "0.1"
tokio          = { version = "1", features = ["full"] }
futures        = "0.3"
phantomchat_core = { path = "../core" }
# WebSocket — replaced blocking tungstenite with async variant
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tokio-native-tls  = "0.3"
native-tls        = "0.2"
url            = "2.3"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
anyhow         = "1.0"
tokio-socks    = "0.5"
tracing        = "0.1"
# Nostr event crypto
secp256k1      = { version = "0.27", features = ["rand-std", "global-context"] }
sha2           = "0.10"
hex            = "0.4"
base64         = "0.21"
rand           = "0.8"
