[package]
name = "phantomchat_desktop"
version = "0.1.0"
edition = "2021"
description = "PhantomChat desktop app (Tauri 2)"
publish = false

# Library target lets `tauri::Builder` live in `lib.rs` so both the desktop
# binary entry-point and any future mobile target reuse the same plumbing.
[lib]
name = "phantomchat_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog       = "2"
tauri-plugin-opener       = "2"
tauri-plugin-updater      = "2"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
tokio        = { version = "1", features = ["full"] }
anyhow       = "1.0"
base64       = "0.21"
hex          = "0.4"
sha2         = "0.10"
dirs         = "5"
x25519-dalek = "2.0"
chrono       = { version = "0.4", default-features = false, features = ["clock"] }
qrcodegen    = "1.8"
# rustls-tls so we don't pull native OpenSSL into the bundle just for the
# opt-in crash-report POST. `default-features = false` strips the default
# native-tls path; we only need the JSON-body POST surface.
reqwest      = { version = "0.13", default-features = false, features = ["rustls", "http2", "json"] }

# Same feature subset as the CLI: envelope/scanner/session + the libp2p/Nostr
# net + MLS group stack, but no Flutter FFI bridge or SQLCipher.
phantomchat_core   = { path = "../../core", default-features = false, features = ["net", "mls"] }
phantomchat_relays = { path = "../../relays" }

# Direct openmls + tls_codec deps so the new MLS lifecycle commands
# (`mls_list_members` / `mls_leave_group` / `mls_remove_member`) can call
# raw openmls methods on the `MlsGroup` returned by `core::mls::load_group`
# without re-exporting every type through `core`. Versions match what
# `core/Cargo.toml` already pulls in for the `mls` feature.
openmls    = "0.8"
tls_codec  = { version = "0.4", features = ["derive", "serde", "mls"] }

[features]
default = ["custom-protocol"]
# Tauri convention: the `custom-protocol` feature is enabled in production
# builds (`tauri build`) and skipped in `tauri dev` so the dev server can
# proxy the frontend.
custom-protocol = ["tauri/custom-protocol"]
