[package]
name = "phantomchat_desktop"
version = "0.1.0"
edition = "2021"
description = "PhantomChat desktop app (Tauri 2)"
publish = false

# Library target lets `tauri::Builder` live in `lib.rs` so both the desktop
# binary entry-point and any future mobile target reuse the same plumbing.
[lib]
name = "phantomchat_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog       = "2"
tauri-plugin-opener       = "2"
tauri-plugin-updater      = "2"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
tokio        = { version = "1", features = ["full"] }
anyhow       = "1.0"
base64       = "0.21"
hex          = "0.4"
sha2         = "0.10"
dirs         = "5"
x25519-dalek = "2.0"
chrono       = { version = "0.4", default-features = false, features = ["clock"] }
qrcodegen    = "1.8"
# rustls-tls so we don't pull native OpenSSL into the bundle just for the
# opt-in crash-report POST. `default-features = false` strips the default
# native-tls path; we only need the JSON-body POST surface.
reqwest      = { version = "0.13", default-features = false, features = ["rustls", "http2", "json"] }
# Pure-Rust mDNS responder + browser used for zero-touch LAN org discovery.
# No system mdns daemon required; runs its own ServiceDaemon on UDP 5353.
mdns-sd      = "0.13"
# CSPRNG for the 6-character LAN org code generator. `OsRng` + `gen_range`
# (rand 0.8 API) gives us a uniformly-random pick from the unambiguous-
# alphabet table without pulling in a heavier crypto-rng dep.
rand         = "0.8"
# Wave 8H — keystore migration uses `Zeroizing<Vec<u8>>` to wipe transient
# plaintext key bytes from RAM as soon as they're stashed in the host
# keystore. Same `zeroize` version core already pulls in.
zeroize      = "1.7"

# ── Encrypted backup / restore (Wave 8c) ────────────────────────────────────
# Argon2id KDF for the passphrase → key-encryption-key derivation, OWASP
# 2023 recommended parameters. `chacha20poly1305` provides XChaCha20-Poly1305
# AEAD (24-byte nonce → safe to generate fresh per-file with OsRng without
# tracking a counter). `zip` packages the per-file ciphertexts into a single
# `.pcbackup` archive (a regular ZIP with a renamed extension so a corrupt
# file is salvageable with any unzip tool down to the unencrypted meta).
# `zeroize` wipes the unwrapped data-key + KEK from RAM after each backup or
# restore so a later memory dump can't recover them.
argon2             = "0.5"
chacha20poly1305   = "0.10"
zip                = "4"
zeroize            = { version = "1", features = ["zeroize_derive"] }

# Same feature subset as the CLI: envelope/scanner/session + the libp2p/Nostr
# net + MLS group stack, but no Flutter FFI bridge or SQLCipher.
phantomchat_core   = { path = "../../core", default-features = false, features = ["net", "mls"] }
phantomchat_relays = { path = "../../relays" }

# Direct openmls + tls_codec deps so the new MLS lifecycle commands
# (`mls_list_members` / `mls_leave_group` / `mls_remove_member`) can call
# raw openmls methods on the `MlsGroup` returned by `core::mls::load_group`
# without re-exporting every type through `core`. Versions match what
# `core/Cargo.toml` already pulls in for the `mls` feature.
openmls    = "0.8"
tls_codec  = { version = "0.4", features = ["derive", "serde", "mls"] }

[features]
default = ["custom-protocol"]
# Tauri convention: the `custom-protocol` feature is enabled in production
# builds (`tauri build`) and skipped in `tauri dev` so the dev server can
# proxy the frontend.
custom-protocol = ["tauri/custom-protocol"]
