[package]
name = "phantom-build-org-msi"
version = "0.1.0"
edition = "2021"
description = "PhantomChat enterprise MSI templater — bakes per-org bootstrap into a deploy artifact"
publish = false

[[bin]]
name = "phantom-build-org-msi"
path = "src/main.rs"

[dependencies]
clap        = { version = "4.6", features = ["derive"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
csv         = "1.3"
rand_core   = { version = "0.6", features = ["std"] }
base64      = "0.21"
anyhow      = "1.0"
